--- a/informations/evaluations.qmd
+++ b/informations/evaluations.qmd
@@ -5,4 +5,121 @@ format:
   latex: default
 --- 
 
-## Modalités d'évaluations 
+## Modalités d'évaluations
+
+| Titre      | Date    | Mode de travail | Pondération |
+| ---------- | ------- | --------------- | ----------- |
+| Examen 1   |         | Individuel      | 25\%        |
+| Examen 2   |         | Individuel      | 50\%        |
+| Projet     |         | En équipe       | 25\%        |
+
+<p style="font-size:10px; ">Identification. Lors d'un examen, une carte d'identité avec photo admissible doit être déposée sur le coin de votre table. Les cartes admissibles sont la carte de l'Université Laval en plastique, un permis de conduire canadien, une carte d'assurance-maladie avec photo émise par une province canadienne ou un passeport canadien ou étranger.</p>
+
+## Informations détaillées sur les évaluations
+
+### Examen 1 
+
+Date et lieu: 
+
+Mode de travail: Individuel
+
+Pondération: 25\%
+
+Remise de l'évaluation: 
+
+Directives de l'évaluation: Tout le contenu du cours est susceptible d'être a l'examen. 
+
+Matériel autorisé: pas de restriction. 
+
+
+### Examen 2
+
+Date et lieu: 
+
+Mode de travail: Individuel
+
+Pondération: 50\%
+
+Remise de l'évaluation: 
+
+Directives de l'évaluation: Tout le contenu du cours est susceptible d'être à l'examen. 
+
+Matériel autorisé: pas de restriction. 
+
+
+### Projet 
+
+Date et lieu: 
+
+Mode de travail: En équipe 
+
+Pondération: 25\%
+
+Remise de l'évaluation: 
+
+Directives de l'évaluation: 
+
+Matériel autorisé: pas de restriction. 
+
+## Échelle des cotes 
+
+| Cote | \% minimum | \% maximum |
+| :--: | ---------: | ---------: |
+| A+   | 92         | 100        |
+| A    | 88         | 91.99      |
+| A-   | 84         | 87.99      |
+| B+   | 80         | 83.99      |
+| B    | 75         | 79.99      |
+| B-   | 70         | 74.99      |
+| C+   | 65         | 69.99      |
+| C    | 60         | 64.99      |
+| C-   | 55         | 59.99      |
+| D+   | 52         | 54.99      |
+| D    | 50         | 51.99      |
+| E    | 0          | 49.99      |
+
+## Détails sur les modalités d'évaluation 
+
+Conformément à la politique du Département de mathématiques et de statistique en matière d'amélioration et de consolidation de la connaissance du français, la qualité de l'écrit sera sanctionnée dans tous les travaux et examens. Un maximum de 10\% des points pourra être enlevé pour la qualité de la langue et de la rédaction.
+
+Aucun retard n'est accepté pour la remise des travaux.
+
+Toute reprise d'évaluation accordée par la politique de reprise d'évaluation du Département aura lieu lors des dates de reprises officielles de la faculté.
+
+## Absence à une activité obligatoire
+
+Ces modalités s'appliquent en vertu des articles 4.41 et 4.42 du Réglement des études de l'Université Laval: 
+
+  * 4.41 Tout défaut de se soumettre à une activité d' évaluation entraine la note zéro pour cette activité d' évaluation, à moins que l' étudiante ou l' étudiant ne démontre que cette omission est attribuable à des motifs sérieux.
+  * 4.42 La reprise d' une évaluation est possible pour des motifs sérieux. Elle se fait selon les modalités prévues par l' unité responsable de l' activité de formation.
+
+La reprise d' une évaluation peut donc execptionnellement être autorisée pour des motifs jugés sérieux, dans la mesure où la procédure décrite ci-dessous est respectée. 
+
+**Motifs d'absence jugés sérieux**
+
+Les motifs suivants sont jugés sérieux et donc acceptables pour demander une reprise d'évaluation: 
+
+  - Maladie ou accident empêchant de se déplacer;
+  - Hospitalisation;
+  - Maladie grave ou décès d'un proche;
+  - Participation à une activité sportive de haut niveau;
+  - Convocation en cour de justice.
+
+**Procédure à suivre**
+
+Dès que possible et au plus tard cinq (5) jours ouvrables après la date de l'évaluation (ou dans certains cas, avant la date de l'évaluation, dès que le motif sera connu), l'étudiante ou l'étudiant qui veut faire une demande de reprise d'évaluation doit remplir et soumettre le formulaire électronique "[Demande de reprise d'une évaluation](https://ulavaldti.sharepoint.com/sites/FSG-reprise-dexamens-et-reconnaissance-de-cours/Lists/Demande%20de%20reprise%20dexamens/NewForm.aspx?Source=https%3A%2F%2Fulavaldti.sharepoint.com%2Fsites%2Ffsg-demande-de-reprise-examen%2FLists%2FDemande%2520de%2520reprise%2520dexamens%2FEtudiant.aspx%3FCT%3D1724436857013%26OR%3DOWA%252DNT%252DMail%26CID%3D42d5014c%252D8fb5%252D8232%252Dbd8f%252D69c67e3a9cdd&ContentTypeId=0x010020B04CCB63D0044D860D6BB7B9C92629007488899A2536D44DA71B9101B9C72D92&RootFolder=)" en prenant soin d'y joindre les pièces justificatives requises.
+
+Pour avoir plus de détail sur les procédures à suivre et les motifs sérieux pouvant donner droit à une reprise d'évaluation, consulter le document "[Modalités et procédure de reprise d'une évaluation sommative à la Faculté des sciences et de génie](https://www.fsg.ulaval.ca/fileadmin/site_facultaire/Espace_facultaire/Étudiants/Politiques_facultaires/Modalités_reprise_évaluation_FSG_A24.pdf)" disponible sur le site web de la FSG.
+
+Dans certains cas, la ou le responsable du cours pourrait adopter une procédure simplifiée de gestion des demandes de reprises d'évaluation, tout en respectant les critères décrits dans cette politique. Dans ces cas, des explications particulières seront données à cet effet dans le plan de cours et présentées lors de la première séance.
+
+## Politique sur l'utilisation d'appareils électroniques
+
+La politique sur l' utilisation d'appareils électroniques de la Faculté des Sciences et de Génie peut être consultée à l' adresse: [lien](https://www.fsg.ulaval.ca/fileadmin/site_facultaire/Espace_facultaire/Étudiants/Politiques_facultaires/_Calculatrices-autorisées-FSG_20250221.pdf).
+
+## POlitique sur le plagiat et la fraude académique 
+
+
+## Étudiants ayant une situation de handicap liée à une limitation fonctionnelle 
+
+
