--- a/informations/description.qmd
+++ b/informations/description.qmd
@@ -25,24 +25,20 @@ Les étudiants devraient aussi avoir une certaine familiarité avec le langage R
 À la fin du cours, l'étudiant ou l'étudiante devra être capable :
 
 * de comprendre et décrire succinctement les fondements théoriques des méthodes d’analyse de données étudiées;
-* d’identifier correctement les situations où l’emploi de ces méthodes est indiqué ;
-* d’utiliser efficacement un logiciel tel SAS ou R pour mettre en oeuvre ces méthodes ;
-* d’analyser et d’interpréter judicieusement les résultats découlant de l’analyse ;
+* d’identifier correctement les situations où l’emploi de ces méthodes est indiqué;
+* d’utiliser efficacement un logiciel tel SAS ou R pour mettre en oeuvre ces méthodes;
+* d’analyser et d’interpréter judicieusement les résultats découlant de l’analyse;
 * de formuler par écrit les conclusions de l’analyse, dans le respect des limites de la méthodologie.
 
 ## Équipement informatique
 
-Vous pourriez avoir besoin d’un ordinateur, de haut-parleurs ou d’un casque d’écoute, d’un microphone, d’une webcam et d’une connexion Internet avec fil à large bande ou sans fil. Pour vérifier les paramètres de configuration minimaux selon le système d’exploitation, nous vous invitons à visiter cette page https://www.ulaval.ca/etudiants-actuels/equipez-vous-pour-reussir
+Vous pourriez avoir besoin d’un ordinateur, de haut-parleurs ou d’un casque d’écoute, d’un microphone, d’une webcam et d’une connexion Internet avec fil à large bande ou sans fil. Pour vérifier les paramètres de configuration minimaux selon le système d’exploitation, nous vous invitons à visiter cette [page](https://www.ulaval.ca/etudiants-actuels/equipez-vous-pour-reussir).
 
 De plus, ce cours peut nécessiter des besoins logiciels particuliers qui seront alors décrits dans d’autres sections du plan de cours, le cas échéant.
 
 ## Fonctionnement
 
 Les cours et examen auront lieu en présentiel les mardi et vendredi matin, mais une portion du matériel sera disponible en ligne. De façon générale, la séance du vendredi sera une séance magistrale et la séance du mardi sera dédiée à des exercices pratiques réalisés de façon autonome par les étudiants avec le soutien de l'enseignant.
-
-Le portail des cours pour les évaluations
-
-Les évaluations se feront sur le portail des cours dans la section Liste des évaluations. Les questionnaires hebdomadaires sont dans la section Questionnaires (voir l'onglet dans la section Outils à gauche). Vos travaux seront déposés dans la boîte de dépôt du portail. Vos résultats seront consignés dans la section Sommaire des résultats.
 
 
 ## Approches pédagogiques
