--- a/contents/01-introduction.qmd
+++ b/contents/01-introduction.qmd
@@ -5,10 +5,13 @@ format:
   pdf: default
 ---
 
+
+* Slides: [link](../slides/01-introduction-slides.qmd)
+
 ## Qu'est-ce que l'analyse de données ?
 
 L'analyse de données est un ensemble de méthodes permettant de retirer de l'information d'un jeu de données. On parle aussi d'apprentissage statistique (*statistical learning*). 
-L'idée est d'utiliser des modèles statistiques pour comprendre comment les données sont structurées et comment elles intéragissent l' une avec l' autre. 
+L'idée est d'utiliser des modèles statistiques pour comprendre comment les données sont structurées et comment elles intéragissent l'une avec l'autre. 
 
 ::: {.callout-note appearance="simple"}
 
