--- a/contents/06-dimension.en.qmd
+++ b/contents/06-dimension.en.qmd
@@ -1,8 +1,9 @@
---- 
-title: "Biais/Variance"
-format: 
+---
+title: "Dimension"
+format:
   html: default
-  pdf:
+  pdf: 
     header-includes: 
       - \usepackage{mathtools}
 --- 
+
