--- a/contents/08-nonsupervisee.en.qmd
+++ b/contents/08-nonsupervisee.en.qmd
@@ -1,8 +1,9 @@
 --- 
-title: "Biais/Variance"
+title: "Unsupervised"
 format: 
   html: default
   pdf:
     header-includes: 
       - \usepackage{mathtools}
 --- 
+
