--- a/include/biblio.bib
+++ b/include/biblio.bib
@@ -43,3 +43,20 @@
   isbn = {978-3-642-58033-8},
   langid = {english},
 }
+@journalArticle{hotellingAnalysisComplexStatistical1933,
+  libraryCatalog = {APA PsycNet},
+  year = {1933},
+  date = {1933-00-00 1933},
+  pages = {417-441},
+  DOI = {10.1037/h0071325},
+  publicationTitle = {Journal of Educational Psychology},
+  ISSN = {1939-2176},
+  author = {Hotelling, H.},
+  title = {Analysis of a complex of statistical variables into principal components},
+  extra = {Place: US
+Publisher: Warwick & York},
+  issue = {6},
+  key = {RAP8FFXK},
+  abstractNote = {The problem is stated in detail, a method of analysis is derived and its geometrical meaning shown, methods of solution are illustrated and certain derivative problems are discussed. (To be concluded in October issue.) (PsycINFO Database Record (c) 2016 APA, all rights reserved)},
+  volume = {24},
+}
