--- a/slides/01-introduction-slides.qmd
+++ b/slides/01-introduction-slides.qmd
@@ -8,8 +8,9 @@ date-format: "DD MMM YYYY"
 slide-number: c/t
 title-logo: ../include/logo-ul.png
 format:
-  revealjs:
+  revealjs: 
     theme: [default, ../include/ulaval-slide.scss]
+    chalkboard: true
     width: 1280
     height: 720
     template-partials:
