--- a/contents/03-generalities.qmd
+++ b/contents/03-generalities.qmd
@@ -5,4 +5,8 @@ format:
   pdf:
     header-includes:
       - \usepackage{mathtools} 
---- 
+---
+
+* Slides: [link](../slides/03-generalites-slides.qmd)
+
+
