--- a/contents/dimension/04-others.qmd
+++ b/contents/dimension/04-others.qmd
@@ -1,8 +1,13 @@
 --- 
-title: "Others"
+title: "Divers"
 format: 
   html: default
   pdf:
     header-includes:
       - \usepackage{mathtools} 
---- 
+---
+
+## $t$-SNE 
+
+
+## UMAP
