--- a/contents/dimension/02-mca.qmd
+++ b/contents/dimension/02-mca.qmd
@@ -5,4 +5,149 @@ format:
   pdf:
     header-includes:
       - \usepackage{mathtools} 
---- 
+---
+
+## Introduction
+
+L'analyse en composantes principales concerne des données **continues**. Que faire lorsque les variables sont rapportées dans des tableaux de contingences où alors comme réponses à des questionnaires à choix multiples ? Que faire lorsque les variables sont catégorielles ? Il est possible de faire la même chose que pour l'ACP pour des variables catégorielles, cette méthode s'appelle l'analyse des correspondances (AC). Cette méthode permet de représenter graphiquement des tableaux de fréquence. Pour des tableaux de fréquences croisant deux variables, on parlera d'analyse des correspondances bianires (ACB) ou alors d'analyse factorielle des correspondances (AFC). Pour des tableaux de fréquences croisant troix variables ou plus, on parlera d'analyse des correspondances multiples (ACM).
+
+::: {.callout-note icon=false}
+## Examples
+
+La boussole électorale de Radio-Canada.
+Étude sur les clients d'une compagnie de télécom.
+Relation entre la couleur des yeux et des cheveux.
+:::
+
+## Notation 
+
+Notation: Soit $K = (k_{ij})$, où $k_{ij}$ est le nombre d'individus appartenant à la classe $i \in \{ 1, \dots, n \}$ et à la catégorie $j \in \{ 1, \dots, p \}$.
+
+Tableau des fréquences relatives: Comme les fréquences sont proportionnelles à la taille d'échantillon $n$, le tableau des fréquences relatives contient plus d'information : $F = (f_{ij})$, dans lequel
+$$f_{ij} = \frac{k_{ij}}{k_{\bullet\bullet}} = \frac{k_{ij}}{\sum_{l = 1}^{n} \sum_{m = 1}^{p} k_{lm}}.$$
+
+Les marges du tableau correspondent à la somme des colonnes pour chaque ligne et de la somme des lignes pour chaque colonne:
+\begin{align}
+f_{i \bullet} &= \sum_{j = 1}^{p} f_{ij} = \frac{k_{i \bullet}}{k_{\bullet\bullet}}, \quad 1 \leq i \leq n; \\
+f_{\bullet j} &= \sum_{i = 1}^{n} f_{ij} = \frac{k_{\bullet j}}{k_{\bullet\bullet}}, \quad 1 \leq j \leq p.
+\end{align}
+
+Les fréquences relatives estiment des probabilités. Dans le cas d'un tableau de fréquences croisant deux variables, sous l'hypothèse d'indépendance, les fréquences relatives devraient être telles qu'on ne s'éloigne pas trop de la relation 
+$$f_{ij} = f_{i \bullet} f_{\bullet j}, \quad i \in \{ 1, \dots, n \}, j \in \{ 1, \dots, p \}.$$
+
+Statistique du $\chi^{2}$: on peut tester si les différences entre $f_{ij}$ et $f_{i \bullet} f_{\bullet j}$ sont significatives à l'aide du test du $\chi^2$:
+$$T = \sum_{i = 1}^{n} \sum_{j = 1}^{p} \frac{\left( k_{ij} - \mathbb{E}(k_{ij}) \right)^2}{\mathbb{E}(k_{ij})} = \sum_{i = 1}^{n} \sum_{j = 1}^{p} \frac{\left( k_{ij} - \frac{k_{i \bullet}k_{\bullet j}}{k_{\bullet\bullet}} \right)^2}{\left( \frac{k_{i \bullet} k_{\bullet j}}{k_{\bullet\bullet}} \right)}.$$
+
+Si les variables sont indépendantes, la statistique $T$ dit être proche de $0$.
+
+On peut aussi s'intéresser à la contribution de chaque cellule à la valeur globale de la statistique $T$. Cela permet d'obtenir le profil de chaque ligne $i$ et de chaque colonne $j$.
+\begin{align}
+L_i &= \left( \frac{k_{i 1}}{k_{i \bullet}}, \dots, \frac{k_{i p}}{k_{i \bullet}} \right) &= \left( \frac{f_{i 1}}{f_{i \bullet}}, \dots, \frac{f_{i p}}{f_{i \bullet}} \right) \\
+C_j &= \left( \frac{k_{1 j}}{k_{\bullet j}}, \dots, \frac{k_{n j}}{k_{\bullet j}} \right) &= \left( \frac{f_{1 j}}{f_{\bullet j}}, \dots, \frac{f_{n j}}{f_{\bullet j}} \right)
+.
+\end{align}
+
+Le profil-ligne moyen est donné par 
+$$\left( \sum_{i = 1}^{n} f_{i \bullet} \frac{f_{i 1}}{f_{i \bullet}}, \dots, \sum_{i = 1}^{n} f_{i \bullet} \frac{f_{i p}}{f_{i \bullet}} \right) = \left( f_{\bullet 1}, \dots, f_{\bullet p} \right).$$
+Le profil-colonne moyen est donné par 
+$$\left( \sum_{j = 1}^{p} f_{{\bullet j}} \frac{f_{1 j}}{f_{\bullet j}}, \dots, \sum_{j = 1}^{p} f_{\bullet j} \frac{f_{n j}}{f_{\bullet j}} \right) = \left( f_{{1 \bullet}}, \dots, f_{n \bullet} \right).$$
+
+En cas d'indépendance, on a, pour tout $i \in \{ 1, \dots, n \}$ et $j \in \{ 1, \dots, p \}$, 
+$$\left( \frac{f_{i 1}}{f_{i \bullet}}, \dots, \frac{f_{i p}}{f_{i \bullet}} \right) = \left( f_{\bullet 1}, \dots, f_{\bullet p} \right) \quad\text{et}\quad
+\left( \frac{f_{1 j}}{f_{\bullet j}}, \dots, \frac{f_{n j}}{f_{\bullet j}} \right) = \left( f_{{1 \bullet}}, \dots, f_{n \bullet} \right).$$
+
+La dépendance entre les variables est fonction de la ressemblance entre les profils des lignes et les profils des colonnes. On peut mesurer et visualiser cette de diverses manières.
+
+On peut mesurer la distance entre deux profils-lignes avec la distance du $\chi^2$, qui tient compte de l'importance de chaque colonne:
+$$d^2(i, i^\prime) = \sum_{j = 1}^{p} \frac{1}{f_{\bullet j}} \left( \frac{f_{ij}}{f_{i \bullet}} - \frac{f_{i^\prime j}}{f_{i^\prime j}} \right)^2.$$
+
+On peut écrire cela sous forme matricielle. Notons $D_n = \text{diag}(f_{i \bullet}$ et $D_p = \text{diag}(f_{\bullet j}$. On a que la matrice $D_n^{-1}F$ a pour lignes les profils-lignes et la matrice $D_p^{-1}F^{\top}$ a pour lignes les profils-colonnes.
+
+En utilisant ces matrices, la distance du $\chi^2$ au carré est de la forme $x^{\top}D_p^{-1}x$ pour un point-ligne $x \in \mathbb{R}^p$ et de la forme $x^{\top}D_n^{-1}x$ pour un point-colonne $x \in \mathbb{R}^n$.
+
+## Analyse factorielle des correspondances
+
+L'analyse factorielle des correspondances est une approche graphique permettant de représenter simultanément les profils-lignes appartenant à $\mathbb{R}^p$ et les profils-colonnes appartenant à $\mathbb{R}^n$ d'un tableau de fréquences. On cherche donc un espace en deux dimensions où projeter les profils lignes et colonnes de sorte que les points dans cet espace soient le plus près possible des points originaux au sens de la distance du $\chi^2$. L'analyse des correspondances est très similaire à une double ACP.
+
+Analyse directe (sur les lignes): les lignes de la matrice $D_n^{-1}F \in \mathbb{R}^p$. On cherche à les représenter dans cet espace muni de la distance $x^{\top} D_p^{-1} x$.
+
+Analyse duale (sur les colonnes): les colonnes de la matrice $D_p^{-1}F^{\top} \in R^n$. On cherche à les représenter dans cet espace muni de la distance $x^{\top} D_n^{-1} x$.
+
+Premier axe factoriel de l'analyse directe: on cherche le vecteur $u \in \mathbb{R}^p$ tel que 
+$$\left( u^{\top} D_p^{-1} F^{\top} D_n^{-1} \right) D_n \left( D_n^{-1} F D_p^{-1} u \right).$$
+soit maximal, sachant que $u^{\top} D_p^{-1} u = 1$. La solution est donnée par le vecteur propre principal de 
+$$D_p \left( D_p^{-1} F^{\top} D_n^{-1} F D_p^{-1} \right) = F^{\top} D_n^{-1} F D_p^{-1} \equiv S.$$
+
+Les formules des coordonnées dans le système d'axes sont plutôt complexes et pas très parlantes... mais à remarquer:
+
+1. $S$ et $T$ ont les mêmes $p$ premières valeurs propres.
+
+2. En centrant les profils lignes et colonnes, on peut illustrer le résultat des deux graphiques sur les mêmes axes.
+
+## Centre de gravité et inertie 
+
+Les logiciels produisent généralement un graphique centré en $(0, 0)$. Il s'agit d'une analyse relative aux centres de gravité des lignes et des colonnes. Cette pratique est à la fois commune et commode. En fait, la masse de la $i$e ligne est $f_{i \bullet}$, soit la proportion des observations qui tombent sur cette ligne. De fa\c{c}on similaire, la masse de la $j$e colonne est $f_{\bullet j}$. Le centre de gravité des lignes est la moyenne des profils-lignes, mais pondérée par la masse de chaque ligne, et similairement pour les profils-colonnes. 
+
+Le centre de gravité des lignes est défini par $G_L = \left( g_{1}, \dots, g_{p} \right)^top$, où 
+$$g_j = \sum_{i = 1}^{n} f_{i \bullet} \frac{f_{i j}}{f_{i \bullet}} = \sum_{i = 1}^{n} f_{i j} = f_{\bullet j}, \quad 1 \leq j \leq p.$$
+
+De même, le centre de gravité des colonnes est défini par
+$$G_C = \left( f_{1 \bullet}, \dots, f_{n \bullet} \right)^top.$$
+
+Centrage des lignes:
+$$\frac{f_{i j}}{f_{i \bullet}} - g_{j} = \frac{f_{i j}}{f_{i \bullet}} - f_{\bullet j} = \frac{f_{i j} - f_{i \bullet} f_{\bullet j}}{f_{i \bullet}}.$$
+de sorte que, pour tout $i \in \{ 1, \dots, n \}$, 
+$$\sum_{j = 1}^{p} \frac{f_{i j} - f_{i \bullet}f_{\bullet j}}{f_{i \bullet}} = 0.$$
+
+L'analyse ne se fait plus sur
+$$S = F^{\top} D_n^{-1} F D_p^{-1},$$
+mais plutôt sur $S^\star = (s_{j j^\prime}^\star),$ où 
+$$s_{j j^\prime}^\star = \sum_{i = 1}^{n} \frac{\left( f_{i j} - f_{i \bullet} f_{\bullet j} \right) \left( f_{i j^\prime} - f_{i \bullet} f_{\bullet j^\prime} \right)}{f_{i \bullet} f_{\bullet j^\prime}}.$$
+
+Par définition, 
+$$\text{tr}(S^\star) = \sum_{j = 1}^{p} \sum_{i = 1}^{n} \frac{\left( f_{i j} - f_{i \bullet}f_{\bullet j} \right)^2}{f_{i \bullet} f_{\bullet j}}.$$
+
+On retrouve l'expression de la statistique du $\chi^2$ servant à tester l'indépendance entre deux variables.
+
+
+On peut prouver que $s_{j j^\prime}^\star = s_{j j^\prime} - f_{\bullet j},$ où 
+$$s_{j j^\prime} = \sum_{i = 1}^{n} \frac{f_{i j}f_{i j^\prime}}{f_{i \bullet} f_{\bullet j^\prime}}.$$
+Ceci entraîne que ces deux matrices ont les mêmes $p$ premiers vecteurs propres normalisés.
+
+
+Coordonnées des points-lignes. La projection du $i$e point-ligne sur l'axe $j$ est donnée par 
+$$\left( D_n^{-1} F \phi_j \right)_i = \frac{1}{f_{i \bullet}} \sum_{j^\prime = 1}^{p} f_{i j^\prime} \phi_{j j^\prime} = \sqrt{\lambda_j} \Psi_{j i} \equiv \widehat{\Psi}_{j i}.$$
+De plus,
+$$\sum_{i = 1}^{n} f_{i \bullet} \widehat{\Psi}^2_{j i} = \sum_{i = 1}^{n} f_{i \bullet} \left( \sqrt{\lambda_j} \Psi_{j i} \right)^2 = \lambda_j.$$
+
+
+Coordonnées des point-colonne. La projection du $k$e point-ligne sur l'axe $j$ est donnée par 
+$$\left( D_p^{-1} F^{\top} \psi_j \right)_k = \frac{1}{f_{\bullet k}} \sum_{i = 1}^{n} f_{i k} \psi_{j i} = \sqrt{\lambda_j} \Phi_{j k} \equiv \widehat{\Phi}_{j k}.$$
+De plus,
+$$\sum_{k = 1}^{p} f_{\bullet k} \widehat{\Phi}^2_{j k} = \sum_{k = 1}^{p} f_{\bullet k} \left( \sqrt{\lambda_j} \Phi_{j k} \right)^2 = \lambda_j.$$
+
+
+L'inertie absolue du $i$e point-ligne sur l'axe $j$ est $f_{i \bullet}\widehat{\Psi}_{j i}^2$. L'inertie relative du $i$e point-ligne sur l'axe $j$ est 
+$$\frac{f_{i \bullet} \widehat{\Psi}_{j i}^2}{\lambda_j}.$$
+
+
+L'inertie absolue du $k$e point-colonne sur l'axe $j$ est $f_{\bullet k}\widehat{\Phi}_{j k}^2$. L'inertie relative du $k$e point-colonne sur l'axe $j$ est 
+$$\frac{f_{\bullet k} \widehat{\Phi}_{j k}^2}{\lambda_j}.$$
+
+L'inertie totale est $I = T / k_{\bullet\bullet}$.
+
+la qualité de la représentation du $k$e point-colonne dans l'axe $j$ est donnée par
+$$\frac{d_j^2(k, G_C)}{d^2(k, G_c)} = \cos^2(\theta_{k j}),$$
+où $\theta_{k j}$ est l'angle entre le point $k$ et sa projection sur l'axe $j$.
+
+Interprétation: 
+
+1. Plus les $\cos^2(\theta_{k j})$ sont élevés, mieux les points sont représentés sur l'axe $j$.
+
+2. Ceci ne signifie pas pour autant que les points sont près du centre du graphique.
+
+3. Les points éloignés du centre de gravité se distinguent du centre de gravité.
+
+4. Une interprétation semblable existe pour les points-lignes.
+
+
