--- a/contents/remainders/01-linear-algebra.qmd
+++ b/contents/remainders/01-linear-algebra.qmd
@@ -1,8 +1,87 @@
 --- 
-title: "Algebre"
+title: "Algèbre"
 format: 
   html: default
   pdf:
     header-includes:
       - \usepackage{mathtools} 
---- 
+---
+
+
+## Révisions d'algèbre linéaire 
+
+Cf. cours MAT-1200. Donner quelques reférences.
+
+Notons $M$, $N$ et $P$ des matrices de taille $n \times m$, $A$ et $B$ des matrices carrées et $I_n$ la matrice identités, de dimension $n \times n$, et $u$ et $v$ des vecteurs colonnes de taille $n$.
+
+::: {.callout-important icon=false}
+## Propriétés de l'inverse
+
+$$(AB)^{-1} = B^{-1} A^{-1}$$
+
+::: 
+
+::: {.callout-important icon=false}
+## Propriétés du déterminant
+
+\begin{align*}
+  \text{det}(A^\top) &= \text{det}(A) \\
+  \text{det}(A^{-1}) &= 1 / \text{det}(A) \\
+  \text{det}(AB) &= \text{det}(A)\text{det}(B)
+\end{align*}
+
+::: 
+
+::: {.callout-important icon=false}
+## Propriétés de la trace
+
+\begin{align*}
+  \text{tr}(A + B) &= \text{tr}(A) + \text{tr}(B) \\
+  \text{tr}(MN) &= \text{tr}(NM)
+\end{align*}
+
+:::
+
+
+
+Propriété de matrices: 
+
+* Soit $A$ une matrice symmétrique de dimension $n \times n$. $A$ est définie positive si elle est positive et inversible, c'est-à-dire si $u^\top A u > 0$ pour tout $x \in \mathbb{R}^n$ tel que $x \neq 0$.
+
+* Soit $A$ une matrice carrée à valeur dans $\mathbb{R}$. $A$ est orthogonal si $A^\top A = A A^\top = I_n$.
+
+Valeurs et vecteurs propres: 
+
+* Soit $A$ une matrice carrée de dimension $n \times n$. On dit que $\lambda$ est une valeur propre de $A$ si il existe un vecteur $u \neq 0 \in \mathbb{R}^n$ tel que
+$$Au = \lambda u.$$
+Le vecteur $u$ est appelé vecteur propre correspondant à la valeur propre $\lambda$ et l'ensemble des nombres réels $\lambda$ satidfaisant l'équation est appelé spectre de la matrice $A$ et noté $\text{sp}(A)$.
+
+* Si $u$ est un vecteur propre de $A$ correspondant à une valeur propre $\lambda$, alors $cu$, $c \neq 0 \in \mathbb{R}$ sera également un vecteur propre de $A$ correspondant à $\lambda$.
+
+* Si $A$ est symmétrique et $u_{1}$ et $u_{2}$ sont des vecteurs propres correspondant à des valeurs propres différentes de $A$, alors $u_{1}$ et $u_{2}$ sont orthogonaux, *i.e.* $u_{1}^\top u_{2} = 0$.
+
+* Si $A$ a comme valeurs propres (réelles, mais pas forcément distinctes) $\lambda_{1}, \dots, \lambda_{n}$, alors
+$$\text{A} = \prod_{i = 1}^{n} \lambda_i \quad\text{et}\quad \text{tr}(A) = \sum_{i = 1}^{n} \lambda_i.$$
+
+* Si $A$ est symmétrique, **toutes** ses valeurs propres sont réelles.
+
+* Si $A$ est définie positive, alors toutes ses valeurs propres sont positives.
+
+
+Diagonalisation de matrices: 
+
+* Soit $A$ une matrice carrée de dimension $n \times n$. On dit que $A$ est diagonalisable s'il existe une matrice carrée $n \times n$ non-singulière $P$ et une matrice $n \times n$ diagonale $D$ telles que 
+$$P^{-1} A P = D \leftrightarrow A = P D P^{-1}.$$
+
+Toute matrice carrée symmétrique est diagonalisable part une matrice orthogonal $P$.
+
+
+Théorème de décomposition spectrale:
+
+Soit $A$ une matrice carrée symmétrique de dimension $n \times n$ et ses $n$ valeurs propres $\lambda_{1}, \dots, \lambda_n$. Alors il existe une matrice orthogonal $P$ telle que 
+$$A = P \Lambda P^\top, \quad\text{où}\quad \Lambda = \text{diag}(\lambda_1, \dots, \lambda_n).$$
+
+Si $A$ admet $n$ valeurs propres positives distinctes, alors on peut prendre $P$ comme la matrice dont la $k$e coloone est le vacteur propre normé correspondant à la $k$e valeur propre $\lambda_k$.
+
+Soit deux matrices symétriques, $A$ et $M$, comment déterminer le vecteur $u$ tel que $u^{\top}Au$ soit maximal, sachant que $u^{\top}Mu = 1$ ? Il faut prendre $u$ comment le vecteur propre de $M^{-1}A$ associé à $\lambda$ la valeur propre maximale de $M^{-1}A$. On obtient ainsi
+$$u^{\top} A u = u^{\top}\lambda M u = \lambda U^{\top} M u = \lambda.$$
