--- a/contents/dimension/02-mca.qmd
+++ b/contents/dimension/02-mca.qmd
@@ -151,3 +151,71 @@ Interprétation:
 4. Une interprétation semblable existe pour les points-lignes.
 
 
+## Example 
+
+
+## Analyse des correspondances multiples
+
+L'analyse des correspondances multiples est une généralisation de l'analyse des correspondances binaires.
+Elle permet la representation graphique de tableaux de fréquences contnant plus de deux variables.
+Un exemple classique d'un tableau de fréquences avec plus de deux variables est le tableau présentant les réponses d'individus à un questionnaire contenant $Q$ questions à choix multiples.
+
+Très utile pour visualiser les résultats d'une étude par questionnaire.
+
+L'ACM peut aussi être vue comme une version de l'ACP quand les variables sont catégorielles:
+
+  * l'analyse duale permet de voir les individus ayant des profils de réponses similaires
+
+  * on peut obtenir des scores continus pour les individus qui capturent une grande partie de l'information
+
+  * donc aussi utile pour scorer les résultats d'une étude par questionnaire dans un but éventuel de partitionnement, par exemple
+
+
+En général, pour un questionnaire contenant $Q$ questions, on a un tableau de la forme suivante:
+$$Z = \left[ Z_1 \mid \cdots \mid Z_{Q} \right].$$
+
+Notation: 
+
+* $Q$: nombre de questions
+* $n$: nombre d'individus répondant au questionnaire
+* $p_q$: nombre de modalités (choix de réponses) de la question $q$.
+* $p = p_{1} + p_{Q}$
+
+Potentiel problème: plus le nombre de questions est grand, plus il y aura de cellules vides. C'est aussi le cas si le nombre de réponses aux questions est important.
+La proportion de cellules non vides est 
+$$\frac{nQ}{np} = \frac{Q}{p}.$$.
+
+Si toutes les questions ont le même nombre de choix de réponses, alors $p_{1} = \dots = p_{Q} = \frac{p}{Q}$, de sorte que
+$$\frac{Q}{p} = \frac{1}{p_{1}} \longrightarrow 0, \quad\text{quand}~ p_{1} \rightarrow \infty.$$
+
+Le tableau résumé est un tableau de taille $n \times Q$. Il contient le numéro de la modalité associée à la réponse de chaque individu pour chacune des questions.
+
+La tableau de Burt est une autre fa\c{c}on de présenter un tableau de fréquences contenant plus de deux variables. Étant donné un tableau logique $Z = \left[ Z_{1} \mid \cdots \mid Z_{Q} \right]$, le tableau de Burt associé est la matrice carrée $p \times p$ définie comme étant 
+$$ B = \begin{pmatrix}
+  Z_1^\top Z_1 & \cdots & Z_1^\top Z_Q \\
+  \vdots & \ddots & \vdots \\
+  Z_Q^\top Z_1 & \cdots & Z_Q^\top Z_Q
+\end{pmatrix}.$$
+
+::: {.callout-important icon=false}
+## Propriétés de $Z_q^\top Z_q$
+
+1. $Z_{q}^\top Z_q$ est une matrice diagonale $p_q \times p_q$ présentant les réponses à la $q$e question.
+
+2. L'élément $(j, j)$ de la matrice $Z_q^\top Z_q$ est égal au nombre d'individus $d_{jj}$ qui appartiennent à la $j$e catégorie de la $q$e question.
+
+3. $Z_{q}^\top Z_{r}$ est le tableau de fréquences présentant les répones au x $q$e et $r$e questions.
+
+4. L'élément $(j, k)$ de la matrice $Z_q^\top Z_r$ est égal au nombre d'individus $d_{jk}$ qui appartiennent à la $j$e catégorie de la $q$e question et à la $k$e catégorie de la $r$e question.
+
+:::
+
+D'un point de vue mathématique, l'ACM est une AFC effectuée sur la matrice logique $Z$ ou sur le tableau de Burt $B$. On peut démontrer que l'on obtient les mêmes facteurs, et ce, peu importe la matrice utilisé pour l'analyse.
+
+::: {.callout-note icon=false}
+## Note
+
+On peut créé un graphique comme l'AFC. Cependant, en ACM, la distance entre les points de même couleur et la géométrie globale du graphique ne peuvent pas s'interpréter comme en AFC. En fait, on s'intéresse aux points qui sont dans une même direction par rapport à l'origine.
+:::
+
+## Example
