--- a/contents/dimension/04-others.qmd
+++ b/contents/dimension/04-others.qmd
@@ -7,6 +7,8 @@ format:
       - \usepackage{mathtools} 
 ---
 
+L'idée est de présenter rapidement d'autres méthodes de changement de dimension. 
+
 ## $t$-SNE 
 
 
